# arbiter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  poem.md  random-number-generator.html
.github/scripts/: portable_release.sh
.github/workflows/: ci.yml  release.yml
agents/: auditor.json  backend.json  devops.json  frontend.json  internals-probe.md  marketer.json  planner.json  research.json  reviewer.json  social.json  writer.json
cmake/: BuildOpenTUI.cmake  HomebrewHints.cmake  embed_themes.cmake
docs/api/: events.md  health.md  index.md  metrics.md  models.md  orchestrate.md  requests-cancel.md
docs/api/a2a/: agent-card.md  dispatch.md  well-known.md
docs/api/admin/: audit.md  tenants-create.md  tenants-get.md  tenants-list.md  tenants-patch.md
docs/api/agents/: chat.md  create.md  delete.md  list.md
docs/api/artifacts/: conversations-create.md  conversations-delete.md  conversations-get.md  conversations-list.md  delete.md  get.md  list.md
docs/api/conversations/: create.md  delete.md  get.md  list.md  messages-list.md  messages-post.md  patch.md
docs/api/memory/: get-scratchpad.md  list-scratchpads.md
docs/api/todos/: create.md  list.md  patch.md
docs/cli/: api.md  environment.md  index.md  init.md  send.md  setup-tools.md
docs/concepts/: a2a.md  advisor.md  artifacts.md  authentication.md  data-model.md  fleet-streaming.md  index.md  mcp.md  operations.md  sandbox.md  search.md  sse-events.md  structured-memory.md  tenants.md  todos.md  writ.md
docs/design/: agent-skills-integration.md
docs/getting-started/: index.md  local.md
docs/maintainer/: probe-backlog-2026-07.md
docs/tui/: commands.md  engine-overhaul.md  index.md  keybindings.md  output-styling-plan.md  output-ux.md  panes.md  sessions.md  streaming.md  themes.md
examples/3bo/: BOM.md  CIRCUIT.md  FIRMWARE.md  JETSON.md  README.md  VISION.md
examples/3bo/agents/: 3bo-events.json  3bo-voice.json  threebo-monitor.json
examples/3bo/bridge/: README.md  bridge.py  bridge_stub.py
examples/3bo/firmware/: README.md
examples/voice-bridge/: README.md  bridge.py
include/: advisor.h  agent.h  agent_conversation.h  api_client.h  api_server.h  atomic_file.h  circuit_breaker.h  cli.h  cli_helpers.h  code_highlighter.h  commands.h  config.h  constitution.h  idempotency_cache.h  loop_manager.h  markdown.h  message_codec.h  orchestrator.h  render_policy.h  ssrf_guard.h  stream_renderer.h  styled_text.h  tenant_store.h  theme.h  title_generator.h
include/mcp/: manager.h  subprocess.h
include/repl/: conversation_store.h  conversation_titling.h  layout.h  layout_weights.h  pane.h  pane_history.h  queues.h  repl_argv.h  transcript_replay.h
include/tui/: ansi_util.h  block_parser.h  confirm_keys.h  history_sidebar.h  line_editor.h  palette.h  sidebar.h  sidebar_format.h  spinner.h  stream_filter.h  style_resolver.h  theme_picker.h  tui.h  tui_design.h
include/tui/opentui/: ansi_scroll_append.h  c_api.h  diff_panel.h  diff_view.h  engine.h  history_sidebar_frame.h  kitty_key_decode.h  mouse_decode.h  mouse_hit.h  pane_frame.h  pane_input_editor.h  pane_scroll_view.h  rounded_box.h  session.h  shared_input_history.h  sidebar_frame.h  span_scroll_append.h  theme_picker_frame.h  (+1 more)
src/: advisor.cpp  agent.cpp  api_client.cpp  api_server.cpp  atomic_file.cpp  circuit_breaker.cpp  cli.cpp  cli_helpers.cpp  code_highlighter.cpp  commands.cpp  constitution.cpp  idempotency_cache.cpp  loop_manager.cpp  main.cpp  markdown.cpp  message_codec.cpp  orchestrator.cpp  render_policy.cpp  sandbox.cpp  ssrf_guard.cpp  stream_renderer.cpp  styled_text.cpp  tenant_store.cpp  theme.cpp  title_generator.cpp
src/a2a/: http.cpp
src/mcp/: manager.cpp  subprocess.cpp
src/repl/: conversation_store.cpp  conversation_titling.cpp  layout.cpp  pane.cpp  pane_history.cpp  queues.cpp  transcript_replay.cpp  transcript_replay_predicates.cpp
src/tui/: ansi_util.cpp  block_parser.cpp  history_sidebar.cpp  palette.cpp  sidebar.cpp  sidebar_format.cpp  spinner.cpp  stream_filter.cpp  style_resolver.cpp  theme_picker.cpp  tui.cpp  tui_design.cpp
tests/: orchestrator_constructible_stub.cpp  orchestrator_session_stub.cpp  pty_harness.cpp  pty_harness.h  term_size_stub.cpp  test_agent_conversation.cpp  test_api_client.cpp  test_api_client_pool.cpp  test_chat_command_tui.cpp  test_circuit_breaker.cpp  test_code_highlighter.cpp  test_commands.cpp  test_confirm_keys.cpp  test_constitution.cpp  test_conversation_store.cpp  test_conversation_store_autosave.cpp  test_conversation_titling.cpp  test_history_sidebar.cpp  test_idempotency_cache.cpp  test_kitty_key_decode.cpp  test_line_editor.cpp  test_markdown_diff.cpp  test_mcp.cpp  test_message_replay_roundtrip.cpp  test_mouse_decode.cpp  test_palette.cpp  test_pane_scroll_segments.cpp  test_sandbox_ssrf.cpp  test_sidebar.cpp  test_sidebar_format.cpp  test_sidebar_tui.cpp  test_spinner.cpp  test_stream_filter.cpp  test_theme_picker.cpp  test_todos.cpp  test_tool_indicator.cpp  test_transcript_replay_predicates.cpp  test_transcript_replay_tui.cpp  test_tui_theme_json.cpp
themes/: andromeda.json  ayu.json  catppuccin-latte.json  catppuccin.json  cobalt.json  dense.json  dracula.json  everforest.json  flexoki-light.json  flexoki.json  github-light.json  github.json  gruvbox-light.json  gruvbox.json  high-contrast-light.json  high-contrast.json  horizon.json  kanagawa.json  light.json  material.json  modern.json  monokai.json  moonlight.json  night-owl.json  nord.json  one-light.json  onedark.json  oxocarbon.json  palenight.json  papercolor.json  poimandres.json  rose-pine-dawn.json  rose-pine.json  solarized-light.json  solarized.json  synthwave.json  tokyo-night.json  vesper.json  zenburn.json
web/: README.md  install.sh  package-lock.json  package.json
web/lib/: assets.mjs  config.mjs  docs.mjs  html.mjs  markdown.mjs  navigation.mjs  render.mjs  seo.mjs  styles.mjs
web/scripts/: build.mjs  dev.mjs
web/src/: liquid-hero.js  site.js  styles.css
web/views/: doc.pug  docs-index.pug  home.pug  layout.pug
(+36 files in other folders)
